--- a/sys/Cargo.toml
+++ b/sys/Cargo.toml
@@ -18,5 +18,6 @@ version = { workspace = true }
 
 [build-dependencies]
 bindgen = { workspace = true }
+regex = { workspace = true }
 
 [dependencies]
