--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = ["./bindings", "./sys"]
+members = ["./dash", "./sys"]
 resolver = "2"
 
 [workspace.package]
@@ -19,3 +19,4 @@ version = "0.1.0"
 [workspace.dependencies]
 bindgen = { version = "0.68" }
 regex = { version = "1.10" }
+tracing = { version = "0.1" }
